--- a/.github/workflows/create-hotfix.yml
+++ b/.github/workflows/create-hotfix.yml
@@ -32,7 +32,11 @@ jobs:
           git fetch origin prod 
           git checkout prod
       - id: package-version
-        run: node scripts/extract-version.js
+        uses: actions/github-script@v6
+        with: 
+          script: |
+             const script = require('./scripts/extract-version.js')
+             script(core);
       - id: branch-name
         run: echo "::set-output name=name::hotfix/${{ steps.package-version.outputs.full_version}}/${{inputs.ng-version}}/${{inputs.name}}"
       - name: create hotfix
