--- a/.github/workflows/create-rc.yml
+++ b/.github/workflows/create-rc.yml
@@ -43,22 +43,12 @@ jobs:
     needs: react
     steps:
       - uses: actions/checkout@v3
-        with:
-          repository: 'alissaVrk/ng-with-react'
-          ref: 'master'
-          token:  ${{ secrets.ACTIONS_GITHUB_TOKEN }}
-      - name: setup git config
-        run: |
-          git config user.name "GitHub Actions Bot"
-          git config user.email "<>"
-      - id: branch-name
-        run: echo "::set-output name=name::feature/rt${{needs.react.outputs.version}}/${{inputs.name}}"
-      - name: create ng branch for release
-        run: |
-          git checkout -b ${{ steps.branch-name.outputs.name }}
-          npm i alissa-todo-react-query@${{needs.react.outputs.version}}.x
-          git commit -am "bump react version to ${{needs.react.outputs.version}}"
-          git push origin ${{ steps.branch-name.outputs.name }}
+      - uses: ./.github/actions/update-ng-branch
+        with: 
+          branch-name: feature/rt${{needs.react.outputs.version}}/${{inputs.name}}
+          token: ${{ secrets.ACTIONS_GITHUB_TOKEN }}
+          should-create: true
+      - uses: actions/checkout@v3
       - run: echo ng branch created ${{ steps.branch-name.outputs.name }}
       #here we could, in theory, deploy to jenkins the new feature branch
 
