--- a/.github/workflows/create-rc.yml
+++ b/.github/workflows/create-rc.yml
@@ -38,7 +38,7 @@ jobs:
         uses: ad-m/github-push-action@master
         with:
           github_token: ${{ secrets.ACTIONS_GITHUB_TOKEN }}
-          branch: dev
+          branch: main
           tags: false
 
   ng:
