--- a/.github/workflows/create-rc.yml
+++ b/.github/workflows/create-rc.yml
@@ -15,6 +15,8 @@ jobs:
       version: ${{ steps.package-version.outputs.version }}
     steps:
       - uses: actions/checkout@v3
+        with:
+          token:  ${{ secrets.ACTIONS_GITHUB_TOKEN }}
       - id: package-version
         uses: actions/github-script@v6
         with: 
@@ -29,17 +31,12 @@ jobs:
           should-create: true
           branch-name: release/${{ steps.package-version.outputs.version}}/${{inputs.name}}
 
+      #do not push the tag because there is no publish
       - name: bump dev version
         run: |
           git checkout main
           npm version minor -m "next release %s"
-      #do not push the tag because there is no publish
-      - name: push changes
-        uses: ad-m/github-push-action@master
-        with:
-          github_token: ${{ secrets.ACTIONS_GITHUB_TOKEN }}
-          branch: main
-          tags: false
+          git push origin main
 
   ng:
     runs-on: ubuntu-latest
