--- a/.github/actions/bump-and-publish/action.yml
+++ b/.github/actions/bump-and-publish/action.yml
@@ -12,6 +12,11 @@ inputs:
     required: false
     default: false
 
+outputs:
+  published-version:
+    description: the new npm version
+    value: ${{ steps.package-version.outputs.full_version }}
+
 runs:
   using: 'composite'
   steps:
@@ -37,13 +42,22 @@ runs:
       run: |
         npm version patch -m "bump version %s"
         yarn build
+    
+    - run: npm publish
+      shell: bash
+      env:
+        NODE_AUTH_TOKEN: ${{ inputs.npm-token }}
+    
     - name: Push changes
       uses: ad-m/github-push-action@master
       with:
         github_token: ${{ inputs.push-token }}
         branch: ${{ inputs.branch-name }}
         tags: true
-    - run: npm publish
-      shell: bash
-      env:
-        NODE_AUTH_TOKEN: ${{ inputs.npm-token }}
+    
+    - id: package-version
+        uses: actions/github-script@v6
+        with: 
+          script: |
+             const script = require('./scripts/extract-version.js')
+             script(core);
