--- a/.github/workflows/publish-rc.yml
+++ b/.github/workflows/publish-rc.yml
@@ -12,8 +12,9 @@ jobs:
     if: github.event.pull_request.merged == true
     runs-on: ubuntu-latest
     outputs:
-      version: ${{ steps.extract-name-parts.outputs.version }}
+      version-name: ${{ steps.extract-name-parts.outputs.version }}
       branch-desc: ${{ steps.extract-name-parts.outputs.desc }}
+      published-version: ${{ steps.bump-and-publish.outputs.published-version }}
     steps:
       - uses: actions/checkout@v3
         with:
@@ -24,7 +25,8 @@ jobs:
           script: |
              const script = require('./scripts/extract-name-params.js')
              script(core, '${{ github.ref }}');
-      - uses: ./.github/actions/bump-and-publish
+      - id: bump-and-publish
+        uses: ./.github/actions/bump-and-publish
         with:
           push-token: ${{ secrets.ACTIONS_GITHUB_TOKEN }}
           npm-token: ${{ secrets.NPM_TOKEN }}
@@ -38,7 +40,8 @@ jobs:
       - uses: actions/checkout@v3
       - uses: ./.github/actions/update-ng-branch
         with: 
-          branch-name: feature/rt${{ needs.react.outputs.version }}/${{ needs.react.outputs.branch-desc }}
+          branch-name: feature/rt${{ needs.react.outputs.version-name }}/${{ needs.react.outputs.branch-desc }}
+          react-version: ${{ needs.react.outputs.published-version }}
           token: ${{ secrets.ACTIONS_GITHUB_TOKEN }}
       - uses: actions/checkout@v3
       #here we could, in theory, deploy to jenkins the new feature branch
