--- a/.github/actions/bump-and-publish/action.yml
+++ b/.github/actions/bump-and-publish/action.yml
@@ -34,7 +34,7 @@ runs:
         git config user.email "<>"
         echo ${{ github.actor }}
     - name: create branch
-      if: ${{ inputs.should-create }} 
+      if: ${{ inputs.should-create }} == true
       shell: bash
       run: git checkout -b ${{ inputs.branch-name }}
     - name: bump version 
