--- a/.github/workflows/merge-to.prod.yml
+++ b/.github/workflows/merge-to.prod.yml
@@ -14,4 +14,5 @@ jobs:
           git checkout prod
           git pull origin ${{ github.ref }} --ff
           git push origin prod
+          git push origin --delete ${{ github.ref }}
 
