pull before push for safety

--- a/.github/workflows/create-rc.yml
+++ b/.github/workflows/create-rc.yml
@@ -38,6 +38,7 @@ jobs:
         run: |
           git checkout main
           npm version minor -m "next release %s"
+          git pull origin main --ff
           git push origin main
 
   ng:
