--- a/.github/workflows/create-hotfix.yml
+++ b/.github/workflows/create-hotfix.yml
@@ -29,7 +29,7 @@ jobs:
         uses: actions/github-script@v6
         with: 
           script: |
-             const script = require('./scripts/extract-version.js')
+             const script = require('./.github/scripts/extract-version.js')
              script(core);
       - id: branch-name
         run: echo "::set-output name=name::hotfix/${{ steps.package-version.outputs.full_version}}/${{inputs.ng-version}}/${{inputs.name}}"
