--- a/.github/workflows/create-rc.yml
+++ b/.github/workflows/create-rc.yml
@@ -22,7 +22,7 @@ jobs:
         uses: actions/github-script@v6
         with: 
           script: |
-             const script = require('./scripts/extract-version.js')
+             const script = require('./.github/scripts/extract-version.js')
              script(core);
 
       - id: bump-and-publish
