--- a/.github/workflows/publish-hotfix.yml
+++ b/.github/workflows/publish-hotfix.yml
@@ -34,6 +34,8 @@ jobs:
           push-token: ${{ secrets.ACTIONS_GITHUB_TOKEN }}
           npm-token: ${{ secrets.NPM_TOKEN }}
       - uses: ./.github/actions/create-merge-pr
+        with:
+          token: ${{ github.token }}
 
   ng:
     if: github.event.pull_request.merged == true
