--- a/.github/workflows/publish-rc.yml
+++ b/.github/workflows/publish-rc.yml
@@ -22,6 +22,7 @@ jobs:
       - uses: actions/checkout@v3
         with:
           fetch-depth: 0
+          token:  ${{ secrets.ACTIONS_GITHUB_TOKEN }}
       - id: extract-name-parts
         uses: actions/github-script@v6
         with: 
@@ -34,6 +35,8 @@ jobs:
           push-token: ${{ secrets.ACTIONS_GITHUB_TOKEN }}
           npm-token: ${{ secrets.NPM_TOKEN }}
       - uses: ./.github/actions/create-merge-pr
+        with:
+          token: ${{ github.token }}
 
   ng:
     if: github.event.pull_request.merged == true
