--- a/.github/workflows/merge-to.prod.yml
+++ b/.github/workflows/merge-to.prod.yml
@@ -12,6 +12,8 @@ jobs:
           fetch-depth: 0
           token:  ${{ secrets.ACTIONS_GITHUB_TOKEN }}
       - run: |
+          git config user.name "GitHub Actions Bot"
+          git config user.email "<>"
           git checkout prod
           git pull origin ${{ github.ref }} --ff
           git push origin prod
