--- a/.github/workflows/publish-hotfix.yml
+++ b/.github/workflows/publish-hotfix.yml
@@ -22,6 +22,7 @@ jobs:
       - uses: actions/checkout@v3
         with:
           fetch-depth: 0
+          token:  ${{ secrets.ACTIONS_GITHUB_TOKEN }}
       - id: extract-name-parts
         uses: actions/github-script@v6
         with: 
