--- a/.github/workflows/create-hotfix.yml
+++ b/.github/workflows/create-hotfix.yml
@@ -3,10 +3,6 @@ name: create hotfix
 on: 
   workflow_dispatch: 
     inputs: 
-      name: 
-        description: 'suffix for the branch names'
-        required: true
-        type: string
       ng-version: 
         description: 'ng hotfix version to be created'
         required: true
@@ -32,7 +28,7 @@ jobs:
              const script = require('./.github/scripts/extract-version.js')
              script(core);
       - id: branch-name
-        run: echo "::set-output name=name::hotfix/${{ steps.package-version.outputs.full_version}}/${{inputs.ng-version}}/${{inputs.name}}"
+        run: echo "::set-output name=name::hotfix/${{ steps.package-version.outputs.full_version}}/${{inputs.ng-version}}"
       - name: create hotfix
         run: |
           git checkout -b ${{ steps.branch-name.outputs.name }}
