--- a/.github/workflows/merge-to-master.yml
+++ b/.github/workflows/merge-to-master.yml
@@ -1,6 +1,5 @@
-name: merge to prod
-on: 
-  workflow_dispatch
+name: merge to master
+on: workflow_dispatch
 concurrency: prod
 
 jobs:
@@ -10,7 +9,7 @@ jobs:
       - uses: actions/checkout@v3
         with:
           fetch-depth: 0
-          token:  ${{ secrets.ACTIONS_GITHUB_TOKEN }}
+          token: ${{ secrets.ACTIONS_GITHUB_TOKEN }}
       - run: |
           git config user.name "GitHub Actions Bot"
           git config user.email "<>"
@@ -18,4 +17,3 @@ jobs:
           git pull origin ${{ github.ref }} --ff
           git push origin prod
           git push origin --delete ${{ github.ref }}
-
