--- a/.github/workflows/bump-rc-version.yml
+++ b/.github/workflows/bump-rc-version.yml
@@ -44,6 +44,10 @@ jobs:
     runs-on: ubuntu-latest
     needs: react
     steps:
+      - uses: actions/checkout@v3
+        with:
+          fetch-depth: 0
+          token: ${{ secrets.ACTIONS_GITHUB_TOKEN }}
       - name: create merge pr to dev
         uses: ./.github/actions/create-merge-pr
         with:
