--- a/.github/actions/create-merge-pr/action.yml
+++ b/.github/actions/create-merge-pr/action.yml
@@ -1,31 +1,33 @@
 name: create merge pr
-description: 'create pr with merge between dev branch and given branch'
+description: "create pr with merge between dev branch and given branch"
 inputs:
   token:
     required: true
 
 runs:
-  using: 'composite'
+  using: "composite"
   steps:
     - id: extract-name-parts
       uses: actions/github-script@v6
-      with: 
+      with:
         script: |
-           const script = require('./.github/scripts/extract-name-params.js')
-           script(core, '${{ github.ref }}');
+          const script = require('./.github/scripts/extract-name-params.js')
+          script(core, '${{ github.ref }}');
     - id: merge-branch
       run: echo "::set-output name=name::merge/${{steps.extract-name-parts.outputs.version}}"
       shell: bash
     - name: create merge branch
       run: |
+        git config user.name "GitHub Actions Bot"
+        git config user.email "<>"
         git switch -C ${{steps.merge-branch.outputs.name}}
         git pull origin main --ff -X theirs
         git push origin ${{steps.merge-branch.outputs.name}} --force
       shell: bash
     - name: create merge pr
       uses: actions/github-script@v6
-      with: 
+      with:
         github-token: ${{ inputs.token }}
         script: |
-           const script = require('./.github/scripts/open-pr.js')
-           await script({ github, context, brancName: '${{steps.merge-branch.outputs.name}}' });
+          const script = require('./.github/scripts/open-pr.js')
+          await script({ github, context, brancName: '${{steps.merge-branch.outputs.name}}' });
