--- a/.github/workflows/create-rc.yml
+++ b/.github/workflows/create-rc.yml
@@ -49,7 +49,7 @@ jobs:
     runs-on: ubuntu-latest
     needs: react
     steps:
-      - name: checkout master
+      - name: checkout react for actions
         uses: actions/checkout@v3
       - name: create feature branch with new react version
         uses: ./.github/actions/update-ng-branch
