--- a/.github/workflows/bump-hotfix-version.yml
+++ b/.github/workflows/bump-hotfix-version.yml
@@ -1,4 +1,5 @@
 name: autorun - bump hotfix version
+run-name: bump ${{ github.ref }}
 
 on:
   pull_request:
@@ -19,17 +20,20 @@ jobs:
       ng-version: ${{ steps.extract-name-parts.outputs.ngVersion }}
       published-version: ${{ steps.bump-and-publish.outputs.published-version }}
     steps:
-      - uses: actions/checkout@v3
+      - name: checkout hotfix branch
+        uses: actions/checkout@v3
         with:
           fetch-depth: 0
           token: ${{ secrets.ACTIONS_GITHUB_TOKEN }}
-      - id: extract-name-parts
+      - name: extract name parts
+        id: extract-name-parts
         uses: actions/github-script@v6
         with:
           script: |
             const script = require('./.github/scripts/extract-name-params.js')
             script(core, '${{ github.ref }}');
-      - id: bump-and-publish
+      - name: bump version and publish to npm
+        id: bump-and-publish
         uses: ./.github/actions/bump-and-publish
         with:
           npm-token: ${{ secrets.NPM_TOKEN }}
@@ -39,11 +43,13 @@ jobs:
     runs-on: ubuntu-latest
     needs: react
     steps:
-      - uses: actions/checkout@v3
+      - name: checkout react for actions
+        uses: actions/checkout@v3
         with:
           fetch-depth: 0
           token: ${{ secrets.ACTIONS_GITHUB_TOKEN }}
-      - uses: ./.github/actions/create-merge-pr
+      - name: create merge pr to dev
+        uses: ./.github/actions/create-merge-pr
         with:
           token: ${{ github.token }}
 
@@ -52,8 +58,10 @@ jobs:
     runs-on: ubuntu-latest
     needs: react
     steps:
-      - uses: actions/checkout@v3
-      - uses: ./.github/actions/update-ng-branch
+      - name: checkout react for actions
+        uses: actions/checkout@v3
+      - name: update react version in ng hotfix release branch
+        uses: ./.github/actions/update-ng-branch
         with:
           branch-name: release/${{ needs.react.outputs.ng-version }}
           react-version: ${{ needs.react.outputs.published-version }}
