--- a/.github/workflows/create-hotfix.yml
+++ b/.github/workflows/create-hotfix.yml
@@ -14,7 +14,8 @@ jobs:
     outputs:
       version: ${{ steps.package-version.outputs.full_version }}
     steps:
-      - uses: actions/checkout@v3
+      - name: checkout master
+        uses: actions/checkout@v3
         with:
           ref: prod
       - name: setup git config
@@ -38,7 +39,8 @@ jobs:
     runs-on: ubuntu-latest
     needs: react
     steps:
-      - uses: actions/checkout@v3
+      - checkout ng master
+        uses: actions/checkout@v3
         with:
           repository: "alissaVrk/ng-with-react"
           ref: "master"
