--- a/.github/workflows/create-hotfix.yml
+++ b/.github/workflows/create-hotfix.yml
@@ -40,7 +40,7 @@ jobs:
     runs-on: ubuntu-latest
     needs: react
     steps:
-      - checkout ng master
+      - name: checkout ng master
         uses: actions/checkout@v3
         with:
           repository: "alissaVrk/ng-with-react"
