--- a/.github/workflows/bump-hotfix-version.yml
+++ b/.github/workflows/bump-hotfix-version.yml
@@ -19,6 +19,7 @@ jobs:
     outputs:
       ng-version: ${{ steps.extract-name-parts.outputs.ngVersion }}
       published-version: ${{ steps.bump-and-publish.outputs.published-version }}
+      release-branches: ${{ steps.find-release-branches.outputs.release_branches }}
     steps:
       - name: checkout hotfix branch
         uses: actions/checkout@v3
@@ -42,13 +43,16 @@ jobs:
         uses: actions/github-script@v6
         with:
           script: |
-            const script = require('./.github/scripts/get-all-release-branches.js')
+            const script = require('./.github/scripts/find-release-branches-and-dev.js')
             script(github, core);
 
   create-merge-pr:
     if: github.event.pull_request.merged == true
     runs-on: ubuntu-latest
     needs: react
+    strategy:
+      matrix:
+        branch: ${{ needs.react.outputs.release-branches }}
     steps:
       - name: checkout react for actions
         uses: actions/checkout@v3
@@ -59,6 +63,7 @@ jobs:
         uses: ./.github/actions/create-merge-pr
         with:
           token: ${{ github.token }}
+          merge-with-branch: ${{ matrix.branch }}
 
   ng:
     if: github.event.pull_request.merged == true
