--- a/.github/workflows/bump-hotfix-version.yml
+++ b/.github/workflows/bump-hotfix-version.yml
@@ -44,7 +44,7 @@ jobs:
         with:
           script: |
             const script = require('./.github/scripts/find-release-branches-and-dev.js')
-            script(github, core);
+            script(github, context, core);
 
   create-merge-pr:
     if: github.event.pull_request.merged == true
