--- a/.github/workflows/bump-hotfix-version.yml
+++ b/.github/workflows/bump-hotfix-version.yml
@@ -52,7 +52,7 @@ jobs:
     needs: react
     strategy:
       matrix:
-        branch: ${{ needs.react.outputs.release-branches }}
+        branch: ${{ fromJSON(needs.react.outputs.release-branches) }}
     steps:
       - name: checkout react for actions
         uses: actions/checkout@v3
