--- a/.github/workflows/bump-rc-version.yml
+++ b/.github/workflows/bump-rc-version.yml
@@ -1,5 +1,5 @@
 name: autorun - bump release version
-run-name: bump ${{github.head_ref}} ${{ github.ref }}
+run-name: bump ${{ github.ref }}
 on:
   pull_request:
     types:
@@ -40,7 +40,7 @@ jobs:
           npm-token: ${{ secrets.NPM_TOKEN }}
 
   create-merge-pr:
-    if: github.event.pull_request.merged == true
+    if: github.event.pull_request.merged == true && !startsWith(github.head_ref, 'merge/')
     runs-on: ubuntu-latest
     needs: react
     steps:
